--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -363,6 +363,7 @@
   "some_out_of_stock_item":"متاح فقط {{amount}}  من هذا المنتج",
   "invalid_otp" : "رقم التحقق غير صحيح",
   "the_date_must_be_a_date_after_yesterday.":"اختر تاريخًا بعد تاريخ امس",
-  "removed_some_out_of_stock_item":"تم ازاله بعض المنتجات الني نفذت كمياتها"
+  "removed_some_out_of_stock_item":"تم ازاله بعض المنتجات الني نفذت كمياتها",
+  "sign_in_up":"تسجيل دخول"
 
 }
