--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -380,5 +380,6 @@
   "some_out_of_stock_item":"only {{amount}} item/s available in stock",
   "invalid_otp": "invalid otp",
   "the_date_must_be_a_date_after_yesterday.":"the date must be a date after yesterday.",
-  "removed_some_out_of_stock_item":"removed some out of stock item/s"
+  "removed_some_out_of_stock_item":"removed some out of stock item/s",
+  "sign_in_up":"sign In/Up"
 }
