--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -11,7 +11,7 @@
   "my_addresses": "العناوين",
   "rights_reserved": "جميع الحقوق محفوظة ل",
   "sign_in": "تسجيل الدخول",
-  "to_orderfast_now": "لتسريع الطلب الآن",
+  "to_orderfast_now": "لتسريع الطلب",
   "Welcome_back": "مرحبا بعودتك",
   "sign_out": "تسجيل خروج",
   "get_your_favourite_food_in": "احصل على طعامك المفضل",
