--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,7 +11,7 @@
   "my_addresses": "my addresses",
   "rights_reserved": "All Rights Reserved To",
   "sign_in": "sign in",
-  "to_orderfast_now": "to Order fast Now",
+  "to_orderfast_now": "to quick order",
   "Welcome_back": "Welcome back",
   "sign_out": "sign out",
   "get_your_favourite_food_in": "get your favourite food in",
