--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -366,5 +366,6 @@
   "removed_some_out_of_stock_item": "تم ازاله بعض المنتجات الني نفذت كمياتها",
   "sign_in_up": "تسجيل دخول",
   "area_changed": "تم تغيير المنطقة بنجاح",
-  "no_products_found": "لا يوجد منتجات طبعا لمعايير البحث"
+  "no_products_found": "لا يوجد منتجات طبعا لمعايير البحث",
+  "min_cart_should_be_5" : "لا يمكن تنفيذ امر عمل اقل من قيمة ٥ د.ك"
 }
