done with point no 5 / pont no 1

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -290,6 +290,7 @@
   "You_’re_about_to_change_your_location": "أنت على وشك أن تغير موقعك",
   "changing_your_location_might_result_in_removing_the_items_from_your_cart": "تغيير موقعك قد يؤدي إلى إزالة بعض المنتجات من عربة التسوق الخاصة بك",
   "rate_is_required": "التقييم مطلوب",
+  "block_is_required": "رقم القطعة مطلوب",
   "note_is_required": "الملاحظات مطلوبة",
   "thanks_for_your_feedback": "شكرًا لتقييمك",
   "preparing_order_we_r_making_ur_food": "جاري تجهيز الطلب",
