--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -34,6 +34,7 @@
   "deliver_in": "deliver in",
   "now_within_20_minutes": "now within 20 minutes",
   "change_mood": "change mood",
+  "block_is_required": "Block No is required.",
   "your_item_is_not_available": "your item is not available",
   "we_are_sorry_about_that_the_item_is_not_available_in": "we are sorry about that the item is not available in this",
   "please_change": "please change",
