--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -368,5 +368,6 @@
   "sign_in_up": "تسجيل دخول",
   "area_changed": "تم تغيير المنطقة بنجاح",
   "no_products_found": "لا يوجد منتجات طبعا لمعايير البحث",
-  "min_cart_should_be_5" : "لا يمكن تنفيذ امر عمل اقل من قيمة ٥ د.ك"
+  "min_cart_should_be_5" : "لا يمكن تنفيذ امر عمل اقل من قيمة ٥ د.ك",
+  "your_pickup_date_is_old_please_choose_recent_date" : "التاريخ الذي تم اختيارة قديم يرجى تحديث التاريخ المختار للطلب"
 }
