update latest points invalid date

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -194,7 +194,7 @@
   "today": "today",
   "tomorrow": "tomorrow",
   "within": "within",
-  "min_order": "min order",
+  "min_order": "min charge order",
   "optional": "optional",
   "price_on_selection": "price on selection",
   "open": "open now",
@@ -237,7 +237,6 @@
   "delivery_later": "delivery",
   "deliver_to": "deliver to",
   "our_branches": "our branches",
-  "min_order_with_delivery": "min order with delivery",
   "opening_hours": "opening hours",
   "payment_options": "payment options",
   "leave_feedback_desc": "your opinion matters, rate us now",
