clean up the mess

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -369,5 +369,6 @@
   "no_products_found": "لا يوجد منتجات طبعا لمعايير البحث",
   "min_cart_should_be_5": "لا يمكن تنفيذ امر عمل اقل من قيمة ٥ د.ك",
   "your_pickup_date_is_old_please_choose_recent_date": "التاريخ الذي تم اختيارة قديم يرجى تحديث التاريخ المختار للطلب",
-  "invalid_phone" : "صيغة الهاتف غير صحيحة يجب ادخال كود الدولة ومن ثم رقم الهاتف"
+  "invalid_phone": "صيغة الهاتف غير صحيحة يجب ادخال كود الدولة ومن ثم رقم الهاتف",
+  "phone_placeholder": " xxxxxxx9 965"
 }
