--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -386,5 +386,6 @@
   "no_products_found": "no products found.",
   "min_cart_should_be_5": "min cart should be at least 5 KD.",
   "your_pickup_date_is_old_please_choose_recent_date": "your pickup date is old please re-choose recent date",
-  "invalid_phone": "invalid phone number, you must enter a valid country code then a valid phone number"
+  "invalid_phone": "invalid phone number, you must enter a valid country code then a valid phone number",
+  "phone_placeholder": "+965 9xxxxxxx"
 }
